# neo

./: CMakeLists.txt  matmul.cl
examples/matmul/: main.cpp
